# wiki

./: .gitignore  Cargo.toml  README.md  WIKI_IMPLEMENTATION_PLAN.md  instructions-gemini-2.txt  instructions-gemini.txt  instructions.txt  metadata.json
id/: id-expand.txt
pkg/: manifest.json
sign/: Cargo.toml
sign/src/: lib.rs
ui/: index.html  package-lock.json  package.json
ui/src/: App.css  App.tsx  index.css  main.tsx
ui/src/components/: AdminView.css  AdminView.tsx  GlobalSearch.css  GlobalSearch.tsx  InviteCenter.css  InviteCenter.tsx  PageEditor.css  PageEditor.tsx  PageHistory.css  PageHistory.tsx  PageList.css  PageList.tsx  PageViewer.css  PageViewer.tsx  SearchBox.css  SearchBox.tsx  WikiList.css  WikiList.tsx  WikiPage.css  WikiPage.tsx
ui/src/context/: ThemeContext.tsx
ui/src/store/: wikiStore.ts
wiki/: Cargo.toml
wiki/src/: icon  lib.rs
