[package]
name = "sign"
version = "0.1.0"
edition = "2021"

[features]
simulation-mode = []

[dependencies]
anyhow = "1.0.97"
hyperware_app_common = { git = "https://github.com/hyperware-ai/hyperprocess-macro" }
hyperprocess_macro = { git = "https://github.com/hyperware-ai/hyperprocess-macro" }
hyperware_process_lib = { version = "1.0.4", features = ["logging"] }
process_macros = "0.1"
rmp-serde = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wit-bindgen = "0.36.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "hyperware:process"
