[dependencies]
anyhow = "1.0.97"
base64 = "0.22"
chrono = "0.4"
process_macros = "0.1"
rmp-serde = "1.3.0"
serde_json = "1.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
wit-bindgen = "0.36.0"
yrs = "0.21"

[dependencies.caller-utils]
path = "../target/caller-utils"

[dependencies.hyperprocess_macro]
git = "https://github.com/hyperware-ai/hyperprocess-macro"
rev = "39da0be"

[dependencies.hyperware_app_common]
git = "https://github.com/hyperware-ai/hyperprocess-macro"
rev = "39da0be"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[features]
simulation-mode = []

[lib]
crate-type = ["cdylib"]

[package]
edition = "2021"
name = "wiki"
version = "0.1.0"

[package.metadata.component]
package = "hyperware:process"
